@@ -6,9 +6,7 @@ import org.endeavourhealth.imapi.dataaccess.EntityRepository;
 import org.endeavourhealth.imapi.model.imq.*;
 import org.endeavourhealth.imapi.model.tripletree.TTArray;
 import org.endeavourhealth.imapi.model.tripletree.TTValue;
-import org.endeavourhealth.imapi.vocabulary.Graph;
 import org.endeavourhealth.imapi.vocabulary.Namespace;
-import org.endeavourhealth.imapi.vocabulary.SNOMED;
 
 import java.util.Arrays;
 import java.util.HashMap;
@@ -18,7 +16,7 @@ import java.util.Map;
 public class IMQToECL {
 
   private final EntityRepository entityRepository = new EntityRepository();
-  private Map<String, String> names = new HashMap<>();
+  private final Map<String, String> names = new HashMap<>();
   private Prefixes prefixes;
   @Getter
   @Setter
@@ -28,7 +26,6 @@ public class IMQToECL {
    * Takes a IM ECL compliant definition of a set and returns is ECL language
    *
    * @param eclQuery An object containing a 'query' and 'showNames'
-   * @return the object with a status, ecl and the query
    */
   public void getECLFromQuery(ECLQueryRequest eclQuery) {
     eclStatus = new ECLStatus();
@@ -44,7 +41,7 @@ public class IMQToECL {
       }
     }
     try {
-      expressionMatch(query, ecl, eclQuery.isShowNames(), false, eclQuery.getGraph());
+      expressionMatch(query, ecl, eclQuery.isShowNames(), false);
       eclQuery.setEcl(ecl.toString().trim());
     } catch (Exception ex) {
       eclStatus.setValid(false);
@@ -82,9 +79,9 @@ public class IMQToECL {
   }
 
   private boolean isBlankWhere(Where where) {
-    if (where.getIri() == null && where.getOr() == null && where.getAnd() == null && where.getNot() == null)
+    if (where.getIri() == null && where.getOr() == null && where.getAnd() == null)
       return true;
-    if (where.getAnd() != null || where.getNot() != null || where.getOr() != null) return false;
+    if (where.getAnd() != null || where.getOr() != null) return false;
     if (where.getIs() == null) return true;
     return where.getIs().getFirst().getIri() == null;
   }
@@ -107,9 +104,7 @@ public class IMQToECL {
 
 
   private boolean isBlankMatch(Match match) {
-    if (match.getInstanceOf() != null && match.getInstanceOf().getFirst().getIri() == null && match.getWhere() == null)
-      return true;
-    return false;
+    return match.getInstanceOf() != null && match.getInstanceOf().getFirst().getIri() == null && match.getWhere() == null;
   }
 
   public ECLType getEclType(Match match) {
@@ -134,23 +129,23 @@ public class IMQToECL {
   }
 
 
-  private void expressionMatch(Match match, StringBuilder ecl, boolean includeNames, boolean isNested, Graph graph) throws QueryException {
+  private void expressionMatch(Match match, StringBuilder ecl, boolean includeNames, boolean isNested) throws QueryException {
     ECLType matchType = getEclType(match);
     boolean isExclusion = match.getNot() != null;
     if (matchType == null)
       return;
     if (matchType == ECLType.simple) {
-      matchInstanceOf(match, ecl, includeNames, graph);
+      matchInstanceOf(match, ecl, includeNames);
     } else if (matchType == ECLType.refined) {
       if (isExclusion) ecl.append("(");
-      match(match, ecl, includeNames, true, graph);
-      addRefinementsToMatch(match, ecl, includeNames, false, graph);
+      match(match, ecl, includeNames, true);
+      addRefinementsToMatch(match, ecl, includeNames, false);
       if (isExclusion) ecl.append(")");
       ecl.append("\n");
     } else if (matchType == ECLType.compound) {
       if (isNested || isExclusion)
         ecl.append("(");
-      compound(match, ecl, includeNames, graph);
+      compound(match, ecl, includeNames);
       if (isNested || isExclusion)
         ecl.append(")");
       ecl.append("\n");
@@ -165,9 +160,9 @@ public class IMQToECL {
           ecl.append("OR ");
         }
         first = false;
-        if (getEclType(subMatch)==ECLType.refined) ecl.append("(");
-        expressionMatch(subMatch, ecl, includeNames, true, graph);
-        if (getEclType(subMatch)==ECLType.refined) ecl.append(")");
+        if (getEclType(subMatch) == ECLType.refined) ecl.append("(");
+        expressionMatch(subMatch, ecl, includeNames, true);
+        if (getEclType(subMatch) == ECLType.refined) ecl.append(")");
         ecl.append("\n");
       }
       if (match.getNot().size() > 1)
@@ -175,34 +170,32 @@ public class IMQToECL {
     }
   }
 
-  private void match(Match match, StringBuilder ecl, boolean includeNames, boolean isNested, Graph graph) throws QueryException {
-    boolean isWild = false;
+  private void match(Match match, StringBuilder ecl, boolean includeNames, boolean isNested) throws QueryException {
     if (match.getInstanceOf() == null && match.getOr() == null && match.getAnd() == null) {
       ecl.append("*");
     } else if (match.getInstanceOf() != null) {
       if (match.getInstanceOf().size() > 1) {
         ecl.append("(");
       }
-      matchInstanceOf(match, ecl, includeNames, graph);
+      matchInstanceOf(match, ecl, includeNames);
       if (match.getInstanceOf().size() > 1) {
         ecl.append(")");
       }
     } else {
       if (isNested)
         ecl.append("(");
-      compound(match, ecl, includeNames, graph);
+      compound(match, ecl, includeNames);
       if (isNested)
         ecl.append(")");
     }
-    if (isWild) ecl.append(")");
   }
 
-  private boolean bracketNeeded(Match match, boolean first,boolean multiItems) {
+  private boolean bracketNeeded(Match match, boolean first, boolean multiItems) {
     if (match.getInstanceOf() == null && match.getOr() == null && match.getAnd() == null) return true;
     return match.getWhere() != null && (!first || multiItems);
   }
 
-  private void compound(Match match, StringBuilder ecl, boolean includeNames, Graph graph) throws QueryException {
+  private void compound(Match match, StringBuilder ecl, boolean includeNames) throws QueryException {
     boolean first = true;
     if (match.getAnd() != null) {
       boolean isConjunction = match.getAnd().size() > 1;
@@ -210,9 +203,9 @@ public class IMQToECL {
         if (!first) {
           ecl.append(" AND ");
         }
-        if (bracketNeeded(subMatch, first,isConjunction)) ecl.append("(");
-        expressionMatch(subMatch, ecl, includeNames, isConjunction, graph);
-        if (bracketNeeded(subMatch, first,isConjunction)) ecl.append(")");
+        if (bracketNeeded(subMatch, first, isConjunction)) ecl.append("(");
+        expressionMatch(subMatch, ecl, includeNames, isConjunction);
+        if (bracketNeeded(subMatch, first, isConjunction)) ecl.append(")");
         first = false;
       }
     }
@@ -222,19 +215,19 @@ public class IMQToECL {
         if (!first) {
           ecl.append(" OR ");
         }
-        if (bracketNeeded(subMatch, first,isDisjunction)) ecl.append("(");
-        expressionMatch(subMatch, ecl, includeNames, isDisjunction, graph);
-        if (bracketNeeded(subMatch, first,isDisjunction)) ecl.append(")");
+        if (bracketNeeded(subMatch, first, isDisjunction)) ecl.append("(");
+        expressionMatch(subMatch, ecl, includeNames, isDisjunction);
+        if (bracketNeeded(subMatch, first, isDisjunction)) ecl.append(")");
         first = false;
       }
     }
   }
 
-  private void matchInstanceOf(Match match, StringBuilder ecl, boolean includeNames, Graph graph) {
+  private void matchInstanceOf(Match match, StringBuilder ecl, boolean includeNames) {
     if (match.getInstanceOf().size() == 1) {
-      if (match.getInstanceOf().get(0).isInvalid())
+      if (match.getInstanceOf().getFirst().isInvalid())
         setErrorStatus(ecl, "unknown concept");
-      addClass(match.getInstanceOf().get(0), ecl, includeNames, graph);
+      addClass(match.getInstanceOf().getFirst(), ecl, includeNames);
     } else {
       ecl.append("(");
       boolean first = true;
@@ -244,7 +237,7 @@ public class IMQToECL {
           ecl.append(" OR ");
         }
         first = false;
-        addClass(instance, ecl, includeNames, graph);
+        addClass(instance, ecl, includeNames);
         ecl.append("\n");
       }
       ecl.append(")");
@@ -252,12 +245,12 @@ public class IMQToECL {
   }
 
 
-  private void addRefinementsToMatch(Match match, StringBuilder ecl, boolean includeNames, boolean ignoreColon, Graph graph) throws QueryException {
+  private void addRefinementsToMatch(Match match, StringBuilder ecl, boolean includeNames, boolean ignoreColon) throws QueryException {
     if (!ignoreColon) ecl.append(": ");
-    addRefined(match.getWhere(), ecl, includeNames, false, graph);
+    addRefined(match.getWhere(), ecl, includeNames, false);
   }
 
-  private void addRefinementsToWhere(Where property, StringBuilder ecl, boolean includeNames, boolean nested, Graph graph) throws QueryException {
+  private void addRefinementsToWhere(Where property, StringBuilder ecl, boolean includeNames, boolean nested) throws QueryException {
     if (nested) ecl.append("(");
     boolean first = true;
     if (property.getAnd() != null) {
@@ -267,7 +260,7 @@ public class IMQToECL {
           ecl.append(" , ");
         }
         first = false;
-        addRefined(subProperty, ecl, includeNames, true, graph);
+        addRefined(subProperty, ecl, includeNames, true);
       }
     }
     if (property.getOr() != null) {
@@ -277,23 +270,23 @@ public class IMQToECL {
           ecl.append(" or ");
         }
         first = false;
-        addRefined(subProperty, ecl, includeNames, true, graph);
+        addRefined(subProperty, ecl, includeNames, true);
       }
     }
     if (nested) ecl.append(")");
   }
 
-  private void addRefined(Where where, StringBuilder ecl, Boolean includeNames, boolean nested, Graph graph) throws QueryException {
+  private void addRefined(Where where, StringBuilder ecl, Boolean includeNames, boolean nested) throws QueryException {
     if (where.isInvalid()) setErrorStatus(ecl, "unknown property concept : ");
     try {
       if (where.isRoleGroup()) ecl.append("{");
       if (where.getAnd() == null && where.getOr() == null) {
-        if (null == where.getIs() && null == where.getNotIs())
+        if (null == where.getIs())
           throw new QueryException("Where clause must contain a value or sub expressionMatch clause");
-        addProperty(where, ecl, includeNames, graph);
+        addProperty(where, ecl, includeNames);
         ecl.append(where.getIs() != null ? " = " : " != ");
         boolean first = true;
-        for (List<Node> nodes : Arrays.asList(where.getIs(), where.getNotIs())) {
+        for (List<Node> nodes : Arrays.asList(where.getIs())) {
           if (nodes != null) {
             if (nodes.size() > 1)
               ecl.append(" (");
@@ -302,14 +295,14 @@ public class IMQToECL {
                 ecl.append("\n or ");
               first = false;
               if (value.isInvalid()) setErrorStatus(ecl, "unknown value concept : ");
-              addClass(value, ecl, includeNames, graph);
+              addClass(value, ecl, includeNames);
             }
             if (nodes.size() > 1)
               ecl.append(")");
           }
         }
       } else {
-        addRefinementsToWhere(where, ecl, includeNames, nested, graph);
+        addRefinementsToWhere(where, ecl, includeNames, nested);
       }
       if (where.isRoleGroup()) ecl.append("}");
     } catch (Exception e) {
@@ -318,19 +311,19 @@ public class IMQToECL {
   }
 
 
-  private void addProperty(Where exp, StringBuilder ecl, boolean includeName, Graph graph) {
+  private void addProperty(Where exp, StringBuilder ecl, boolean includeName) {
     if (exp.isInverse())
       ecl.append(" R ");
-    addConcept(ecl, includeName, getSubsumption(exp), exp.getIri(), exp.getName(), graph);
+    addConcept(ecl, includeName, getSubsumption(exp), exp.getIri(), exp.getName());
   }
 
-  private void addConcept(StringBuilder ecl, boolean includeName, String subsumption, String id, String name, Graph graph) {
-    String iriRef = checkMember(id, name, includeName, graph);
+  private void addConcept(StringBuilder ecl, boolean includeName, String subsumption, String id, String name) {
+    String iriRef = checkMember(id, name, includeName);
     ecl.append(subsumption).append(iriRef);
   }
 
-  private void addClass(Node exp, StringBuilder ecl, boolean includeName, Graph graph) {
-    addConcept(ecl, includeName, getSubsumption(exp), exp.getIri(), exp.getName(), graph);
+  private void addClass(Node exp, StringBuilder ecl, boolean includeName) {
+    addConcept(ecl, includeName, getSubsumption(exp), exp.getIri(), exp.getName());
   }
 
 
@@ -349,12 +342,12 @@ public class IMQToECL {
   }
 
 
-  private String checkMember(String iri, String name, boolean includeNames, Graph graph) {
+  private String checkMember(String iri, String name, boolean includeNames) {
     if (iri == null || iri.isEmpty())
       return "*";
     if (name == null && includeNames) {
       if (names.get(iri) == null) {
-        name = entityRepository.getEntityReferenceByIri(iri, graph).getName();
+        name = entityRepository.getEntityReferenceByIri(iri).getName();
         names.put(iri, name);
       }
       name = names.get(iri);
@@ -380,14 +373,14 @@ public class IMQToECL {
    * @return ECL String
    */
 
-  public String getMembersAsECL(TTArray members, Graph graph) {
+  public String getMembersAsECL(TTArray members) {
     StringBuilder ecl = new StringBuilder();
     boolean first = true;
     String or = " OR ";
     for (TTValue iriRef : members.getElements()) {
       if (!first)
         ecl.append(or).append("\n");
-      addClass(new Node().setIri(iriRef.asIriRef().getIri()), ecl, true, graph);
+      addClass(new Node().setIri(iriRef.asIriRef().getIri()), ecl, true);
       first = false;
     }
     return ecl.toString();
